--- a/css/mobile.css
+++ b/css/mobile.css
@@ -2,6 +2,9 @@
 (min-width:0px) and
 (max-width: 600px)
 {
+    body{
+        scale: 1.2;
+    }
     .keys-container{
         max-width: 275px;
         padding: 20px 20px;
