--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
     font-family: 'League Spartan', sans-serif !important;
     text-align: center;
     /* transition: all 0.5s; */
-    overscroll-behavior:calc(100px - 100px);
+    /* overscroll-behavior:calc(100px - 100px); */
 
 }
 body{
