--- a/css/style.css
+++ b/css/style.css
@@ -11,11 +11,11 @@
     /* overscroll-behavior:calc(100px - 100px); */
 
 }
-html{
+html, body{
     overflow:hidden;
-
 }
 body{
+    position: relative;
     letter-spacing: -0.5px;
     /* scale: 1.1; */
     color: var(--white-text);
