--- a/css/mobile.css
+++ b/css/mobile.css
@@ -10,11 +10,18 @@
         padding: 20px 20px;
         gap: 0;
     }
+    .theme{
+        left: 50px;
+    }
+    div h6{
+        left: -40px;
+    }
     input[type=button]{
         width: 100%;
         border-radius: 5px;
     }
     .solution input{
         width: 250px;
+        height: 10px;
     }
 }
